prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    k8s-3tier-webapp: prometheus
spec:
  type: ClusterIP
  selector:
    k8s-3tier-webapp: prometheus
  ports:
  - protocol: TCP
    port: 9090
